--- a/free-nodes/index.htm
+++ b/free-nodes/index.htm
@@ -115,6 +115,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-08-28">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-8-28-clash-windows.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="8月28日更新20.7M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-8-28-clash-windows.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">8月28日更新20.7M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了加拿大、新加坡、韩国、香港、日本、美国、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                8月28日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-08-27">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -268,23 +285,6 @@
                                 8月19日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-08-18">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-8-18-free-clash.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="8月18日更新21.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-8-18-free-clash.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">8月18日更新21.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了欧洲、日本、新加坡、加拿大、香港、韩国、美国等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                8月18日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li class="disabled"><span>&laquo;</span></li> <li class="active"><span>1</span></li><li><a href="/free-nodes/page-2.htm">2</a></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-2.htm">&raquo;</a></li></ul>            </div>
@@ -294,38 +294,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-15-shadowrocket-node.htm">8月15日更新18.6M/S，2025年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、香港、美国、日本、新加坡、韩国、加拿大等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-4-clash-node.htm">8月4日更新18.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、日本、美国、欧洲、加拿大、新加坡等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-7-26-free-v2ray-subscribe.htm">7月26日更新21.3M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、日本、美国、新加坡、韩国、加拿大、香港等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-25-shadowrocket-node.htm">8月25日更新22.5M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、韩国、日本、加拿大、新加坡、香港等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-7-7-free-subscribe-node.htm">7月7日更新21.4M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、新加坡、加拿大、美国、日本、香港、韩国等地区,最高速度可达21.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -344,8 +314,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-2-free-ssr-node.htm">8月2日更新19.9M/S，2025年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、日本、美国、加拿大、韩国、欧洲等地区,最高速度可达19.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-7-23-free-v2ray-subscribe.htm">7月23日更新21M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、香港、新加坡、日本、美国、加拿大、韩国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -354,8 +324,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-7-9-free-node-subscribe-links.htm">7月9日更新19.4M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、加拿大、香港、韩国、新加坡、欧洲等地区,最高速度可达19.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-7-28-free-v2ray.htm">7月28日更新22M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、美国、韩国、新加坡、欧洲、香港、加拿大等地区,最高速度可达22 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -364,8 +334,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-20-free-subscribe-node.htm">8月20日更新19.3M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、香港、欧洲、美国等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-23-free-node-subscribe.htm">8月23日更新22.7M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、加拿大、美国、欧洲、韩国、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -374,8 +344,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-12-clash-node.htm">8月12日更新21.6M/S，2025年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、新加坡、加拿大、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-7-6-free-ssr-node.htm">7月6日更新22.8M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、美国、加拿大、香港、新加坡、欧洲、日本等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -384,8 +354,38 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-7-14-free-v2ray.htm">7月14日更新22.1M/S，2025年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、欧洲、美国、日本、香港、韩国、加拿大等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-16-free-ssr-node.htm">8月16日更新19.1M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、美国、香港、加拿大、新加坡、欧洲、韩国等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-7-18-free-clash.htm">7月18日更新18.3M/S，2025年最新高速Shadowrocket/SSR/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、新加坡、日本、加拿大、香港、美国、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-28-clash-windows.htm">8月28日更新20.7M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、香港、日本、美国、欧洲等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-1-free-clash-subscribe.htm">8月1日更新20.7M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、香港、加拿大、美国、新加坡、韩国等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -396,7 +396,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">27</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
+                                <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
                                 <h4><span class="badge" style="float: right;">20</span> <a href="/date/2025-07/" title="2025-07 归档">2025-07</a></h4>
                             </div>
         </div>
