--- a/free-nodes/2025-9-14-free-ssr-node.htm
+++ b/free-nodes/2025-9-14-free-ssr-node.htm
@@ -175,38 +175,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-29-free-high-speed-nodes.htm">8月29日更新21.7M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、韩国、加拿大、欧洲、美国、新加坡等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-9-free-shadowrocket-node.htm">8月9日更新21.3M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、新加坡、欧洲、美国、韩国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-12-shadowrocket-node.htm">9月12日更新18.3M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、加拿大、欧洲等地区,最高速度可达18.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-16-free-subscribe-node.htm">9月16日更新21.7M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、加拿大、欧洲、美国、韩国、日本、香港等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-5-free-clash.htm">8月5日更新21.3M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、美国、欧洲、加拿大、新加坡、韩国、日本等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -225,8 +195,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-31-clash-node.htm">8月31日更新19.1M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、欧洲、美国、韩国、加拿大、新加坡等地区,最高速度可达19.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-9-9-node-share-links.htm">9月9日更新20.9M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、韩国、欧洲、日本、美国、香港等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -235,8 +205,58 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-8-7-free-clash-subscribe.htm">8月7日更新20.1M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、韩国、新加坡、加拿大、日本、香港等地区,最高速度可达20.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-8-9-free-shadowrocket-node.htm">8月9日更新21.3M/S，2025年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、新加坡、欧洲、美国、韩国、加拿大等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-9-4-clash-node-daily-updates.htm">9月4日更新20.6M/S，2025年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、日本、新加坡、加拿大、美国、香港、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-12-clash-node.htm">8月12日更新21.6M/S，2025年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、欧洲、韩国、香港、新加坡、加拿大、日本等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-29-free-high-speed-nodes.htm">8月29日更新21.7M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、韩国、加拿大、欧洲、美国、新加坡等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-8-free-clash.htm">8月8日更新18.9M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、欧洲、香港、美国、新加坡、日本、加拿大等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-8-23-free-node-subscribe.htm">8月23日更新22.7M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、加拿大、美国、欧洲、韩国、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -251,33 +271,13 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
         </div>
     </div>
 </div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-1-node-share.htm">9月1日更新20.9M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、美国、香港、韩国、新加坡、欧洲等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-9-21-clash-node.htm">9月21日更新22.3M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、美国、日本、新加坡、欧洲、加拿大等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">17</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
+                                <h4><span class="badge" style="float: right;">18</span> <a href="/date/2025-09/" title="2025-09 归档">2025-09</a></h4>
                                 <h4><span class="badge" style="float: right;">28</span> <a href="/date/2025-08/" title="2025-08 归档">2025-08</a></h4>
                             </div>
         </div>
@@ -292,7 +292,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
             <div class="footer-content">
                 <div class="row">
                     <div class="col-lg-8 footer-left">
-                                            <p>
+                                            <p>本站内容仅供学习与技术研究用途，无意传播或倡导任何违反法律法规的行为。在此声明：用户须自行了解所在地法律法规，合法合规使用；因使用不当产生的法律责任，与本站及作者无关；请在使用前仔细阅读本声明，继续使用即视为同意以上条款。</p>
+                    <p>
                                                 <a href="/">首页</a> |
                                                 <a href="/free-nodes/">免费节点</a> |
                                                 <a href="/paid-subscribe/">推荐机场</a> |
